k8s/monitoring/influxdb-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
  labels:
    app: crystal-mev
spec:
  selector:
    matchLabels:
      app: crystal-mev
      comp: influxdb
  serviceName: influxdb
  replicas: 1
  template:
    metadata:
      labels:
        app: crystal-mev
        comp: influxdb
    spec:
      containers:
        - name: influxdb-pod
          image: influxdb:2.0.6
          volumeMounts:
            - name: influxdb-secret
              mountPath: "/etc/influx"
              readOnly: true
          ports:
            - containerPort: 8086
              name: influxdb-port
      volumes:
        - name: influxdb-secret
          secret:
            secretName: influxdb-secret
